--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,21 @@
-<ion-menu [content]="content">
+<ion-menu id="main-menu" side="left" [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-list>
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        {{p.title}}
+      </button>
+    </ion-list>
+  </ion-content>
+
+</ion-menu>
+
+<ion-menu id="group-menu" side="right" [content]="content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
