--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu id="main-menu" side="left" [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>Main Menu</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -18,7 +18,7 @@
 <ion-menu id="group-menu" side="right" [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>Group Settings</ion-title>
     </ion-toolbar>
   </ion-header>
 
