--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -28,5 +28,38 @@ ion-content {
     border-right: 5px solid #39864c;
 }
 .header-md::after, .tabs-md[tabsPlacement="top"] > .tabbar::after, .footer-md::before, .tabs-md[tabsPlacement="bottom"] > .tabbar::before {
-    background-image: none;
+//     background-image: none;
+    left: 5px;
+    width: calc(100% - 10px);
+}
+ion-navbar.custom-segment {
+    
+    min-height: 44px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    div {
+        ion-title {
+            // border-top: 1px solid white;
+            // border-bottom: 1px solid white;
+            width: none;
+            margin: auto;
+            
+            span {
+                font-weight: 100;
+                height: 44px;
+                padding-left: 16px;
+                padding-right: 16px;
+            }
+            div span:nth-child(1) {
+                border-right: 1px solid white;
+            }
+            div span:nth-child(2) {
+                border-right: 1px solid white;
+                border-left: 1px solid white;
+            }
+            div span:nth-child(3) {
+                border-left: 1px solid white;
+            }
+        }
+    }
 }
