Disables being able to swipe the side menu open.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu id="main-menu" side="left" [content]="content">
+<ion-menu id="main-menu" side="left" [content]="content" swipeEnabled="false">
   <ion-header>
     <ion-toolbar>
       <ion-title>Main Menu</ion-title>
@@ -22,7 +22,7 @@
   </ion-content>
 </ion-menu>
 
-<ion-menu id="group-menu" side="right" [content]="content">
+<ion-menu id="group-menu" side="right" [content]="content" swipeEnabled="false">
   <ion-header>
     <ion-toolbar>
       <ion-title>Group Menu</ion-title>
